<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_confirm_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_confirm_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_confirm_dialog_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_confirm_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/tv_confirm_dialog_title"
        app:layout_constraintStart_toStartOf="@id/tv_confirm_dialog_title"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent=".498"
        android:layout_height="wrap_content"
        style="@style/dialog_button"
        android:text="@string/dialog_btn_cancel"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_confirm_dialog_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent=".498"
        android:layout_height="wrap_content"
        style="@style/dialog_button"
        android:text="@string/dialog_btn_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_cancel"/>




</androidx.constraintlayout.widget.ConstraintLayout>