<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.pob.seeat.presentation.view.chat.ChatListFragment"
        android:label="@string/navigation_message"
        tools:layout="@layout/fragment_chat_list" />
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.pob.seeat.presentation.view.home.HomeFragment"
        android:label="@string/navigation_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_new_feed"
            app:destination="@id/navigation_new_feed" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_detail"
            app:destination="@id/navigation_detail">
            <argument
                android:name="feedIdArg"
                app:argType="string" />
        </action>
        <action
            android:id="@+id/action_home_to_alarm"
            app:destination="@id/navigation_alarm" />
    </fragment>
    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.pob.seeat.presentation.view.bookmark.BookmarkFragment"
        android:label="@string/navigation_bookmark"
        tools:layout="@layout/fragment_bookmark">
        <action
            android:id="@+id/action_bookmark_to_detail"
            app:destination="@id/navigation_detail">
            <argument
                android:name="feedIdArg"
                app:argType="string" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/navigation_my_page"
        android:name="com.pob.seeat.presentation.view.mypage.MyPageFragment"
        android:label="@string/navigation_my_page"
        tools:layout="@layout/fragment_my_page">
        <action
            android:id="@+id/action_my_page_to_terms_of_service"
            app:destination="@id/terms_of_service" />
        <action
            android:id="@+id/action_user_history_to_user_history_list"
            app:destination="@id/user_history_list">
            <argument
                android:name="position"
                app:argType="integer" />
        </action>
        <action
            android:id="@+id/action_user_history_to_feed_detail"
            app:destination="@id/navigation_detail">
            <argument
                android:name="feedIdArg"
                app:argType="string" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/navigation_new_feed"
        android:name="com.pob.seeat.presentation.view.feed.NewFeedFragment"
        android:label="@string/navigation_add_marker"
        tools:layout="@layout/fragment_new_feed">
        <action
            android:id="@+id/action_new_feed_to_select_locate"
            app:destination="@id/navigation_select_locate" />
        <action
            android:id="@+id/action_new_feed_to_detail_image"
            app:destination="@id/navigation_detail_image">
            <argument
                android:name="imageUri"
                app:argType="string" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/navigation_select_locate"
        android:name="com.pob.seeat.presentation.view.feed.SelectLocateFragment"
        android:label="@string/navigation_select_locate"
        tools:layout="@layout/fragment_select_locate" />

    <fragment
        android:id="@+id/navigation_detail_image"
        android:name="com.pob.seeat.presentation.view.feed.DetailImageFragment"
        android:label="@string/navigation_detail_image">
        <argument
            android:name="imageUri"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/navigation_alarm"
        android:name="com.pob.seeat.presentation.view.alarm.AlarmFragment"
        android:label="@string/navigation_alarm"
        tools:layout="@layout/fragment_alarm">
        <action
            android:id="@+id/action_alarm_to_detail"
            app:destination="@id/navigation_detail">
            <argument
                android:name="feedIdArg"
                app:argType="string" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/terms_of_service"
        android:name="com.pob.seeat.presentation.view.mypage.TermsOfServiceFragment"
        tools:layout="@layout/fragment_terms_of_service" />
    <fragment
        android:id="@+id/user_history"
        android:name="com.pob.seeat.presentation.view.mypage.history.HistoryFragment"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_user_history_to_user_history_list"
            app:destination="@id/user_history_list">
            <argument
                android:name="position"
                app:argType="integer" />
        </action>
        <action
            android:id="@+id/action_user_history_to_feed_detail"
            app:destination="@id/navigation_detail">
            <argument
                android:name="feedIdArg"
                app:argType="string" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/user_history_list"
        android:name="com.pob.seeat.presentation.view.mypage.history.HistoryListFragment"
        tools:layout="@layout/fragment_history_list">
        <argument
            android:name="position"
            app:argType="integer" />
        <action
            android:id="@+id/action_user_history_list_to_feed_detail"
            app:destination="@id/navigation_detail">
            <argument
                android:name="feedIdArg"
                app:argType="string" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.pob.seeat.presentation.view.detail.DetailFragment"
        android:label="@string/detail"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="feedIdArg"
            app:argType="string" />

        <action
            android:id="@+id/action_detail_to_show_locate"
            app:destination="@id/navigation_show_locate" >
            <argument
                android:name="feedLatitude"
                app:argType="float" />
            <argument
                android:name="feedLongitude"
                app:argType="float" />
        </action>
        <action
            android:id="@+id/action_navigation_detail_to_navigation_detail_edit"
            app:destination="@id/navigation_detail_edit" />
    </fragment>
    <fragment
        android:id="@+id/navigation_show_locate"
        android:name="com.pob.seeat.presentation.view.detail.ShowLocateFragment"
        android:label="위치 보기"
        tools:layout="@layout/fragment_show_locate">
        <argument
            android:name="feedLatitude"
            app:argType="float" />
        <argument
            android:name="feedLongitude"
            app:argType="float" />


    </fragment>

    <fragment
        android:id="@+id/navigation_detail_edit"
        android:name="com.pob.seeat.presentation.view.detail.EditDetailFragment"
        android:label="@string/detail_edit"
        tools:layout="@layout/fragment_edit_detail">
        <action
            android:id="@+id/action_navigation_detail_edit_to_navigation_select_locate"
            app:destination="@id/navigation_select_locate" />
    </fragment>

</navigation>